--- a/CSS/style.css
+++ b/CSS/style.css
@@ -93,6 +93,9 @@
     
 
 }
+
+
+
 .mobile_look:hover {
     color: var(--bglight-color);
 }
@@ -119,6 +122,9 @@
     font-size: 18px;
     margin-left: 10px;
 }
+
+  
+  
 .menu ul{
     display: flex;
     font-size: 12px;
@@ -298,7 +304,7 @@
       background-repeat: no-repeat;
       background-size:cover;
       clip-path: circle(48%);
-    
+      
     
     
   }
@@ -530,6 +536,7 @@ p[data-category="kids"]{
       background-repeat: no-repeat;
       background-size: cover;
       height: 380px;
+      
     }
 
     .content_area_image_A{
@@ -958,7 +965,7 @@ color: var(--heading-color);}
   display: flex;
   max-width: var(--width-12col);
   height: auto;
-  margin: 112px auto 030px auto;
+  margin: 112px auto 30px auto;
   justify-content: center;
   padding: 0 10px;
 }
@@ -1120,6 +1127,141 @@ text-decoration: none;
    
   }
 
+.team_container{
+  max-width: var(--width-12col);
+  height: auto;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  margin: 40px auto 0 auto;
+  gap: var(--grid-gap);
+  
+  
+  
+}
+.team_container_box_member-a{
+  grid-column: 1/span 7;
+  grid-row: 1;
+  height: 300px;
+  background-color: var(--bglight-color);
+  width: 100%;
+  margin:10px 0 10px 0; 
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  padding: 20px 200px 20px 20px; 
+  border-radius: 5px;
+   
+    
+}
+
+.team_container_box_image-a{
+  grid-column: 5/span 6;
+  grid-row: 1;
+  background-image:url(https://as1.ftcdn.net/v2/jpg/04/15/97/64/1000_F_415976420_TZ0CrXseGw3NYbsaUIHC4INXOFsHgIU0.jpg) ;
+  background-position: left center;
+  background-repeat: no-repeat;
+  background-size:cover;
+  clip-path: circle(38% at 35%);
+  height: 100%;
+  margin: 0 0 0 100px;
+  
+}
+.team_container_box_image-b{
+
+  grid-column: 3/span 6;
+  grid-row: 2;
+  background-image:url(https://as2.ftcdn.net/v2/jpg/02/52/03/53/1000_F_252035373_tbzdvmJXJwjibLPWpYwJnKzcscOAr0Lb.jpg) ;
+  background-position: left center;
+  background-repeat: no-repeat;
+  background-size:cover;
+  clip-path: circle(38% at 60%); 
+
+  height: 100%;
+  margin: 0 100px 0 0;}
+  
+
+
+.team_container_box_member-b{
+  grid-column-end: -1;
+  grid-column-start: 6;
+  grid-row:2;
+  height: 300px;
+  background-color: var(--bglight-color);
+  width: 100%;
+  margin:10px 0 10px 0; 
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  padding: 20px 20px 20px 180px; 
+  border-radius: 5px;
+
+} 
+
+.team_container_box_member-c{
+  grid-column: 1/span 7;
+  grid-row: 3;
+  height: 300px;
+  background-color: var(--bglight-color);
+  width: 100%;
+  margin:10px 0 10px 0; 
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  padding: 20px 200px 20px 20px; 
+  border-radius: 5px;
+   
+    
+}
+
+.team_container_box_image-c{
+  grid-column: 5/span 6;
+  grid-row:3;
+  background-image:url(https://as2.ftcdn.net/v2/jpg/09/09/36/21/1000_F_909362120_EsPsEgtoRFYGMtHLlevc1LTf68EIbUAm.jpg) ;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size:cover;
+  clip-path: circle(38% at 50%);
+  height: 100%;
+  margin: 0 100px 0 0; }
+  
+.team_container_box_text{
+  height: auto;
+  width: fit-content;
+  display:flex;
+  flex-direction: column;
+  
+  
+}
+.team_container_box_text>.content_area_block_button{
+  align-self: flex-start;
+  margin: 10px 0;
+}
+.team_container_box_text p{
+  margin: 10px 0;
+  width: fit-content;
+  font-family:"Andika", sans-serif;
+  
+}
+.team_title{
+  font-size: 16;
+  font-weight: 700;
+  color: var(--text-color);
+  border-left: 2px solid var(--heading-color2);
+  padding: 0 5px;
+}
+.team_name{
+  text-transform: uppercase;
+  color: var(--heading-color2);
+  font-size: 20px;
+  font-weight: 700;
+}
+.team_more{
+  font-size: 14px;
+  
+
+}
+
   
 
   
@@ -1147,9 +1289,11 @@ text-decoration: none;
     cursor: pointer;
     
   }
+ 
   .menu ul{
     display: none;
   }
+ 
   .logo img{display: none;}
 
   .hero-text{
@@ -1158,6 +1302,9 @@ text-decoration: none;
   .hero-container{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+  }
+  .hero-search{
+    margin: 100px auto 0 auto;
   }
   .hero{
     height: 100vh;
